fix overflow problem

--- a/views/shared/exhibit_layouts/nal-document-gallery/layout.css
+++ b/views/shared/exhibit_layouts/nal-document-gallery/layout.css
@@ -1,6 +1,6 @@
 .layout-nal-document-gallery .gallery .exhibit-item, 
 .layout-nal-document-gallery .gallery .exhibit-item:nth-of-type(2n) {
-    width: 24%;
+    width: 23.5%;
     margin-right: 1.25%;
 }
 
@@ -54,12 +54,14 @@
 .layout-nal-document-gallery .exhibit-item-link *,
 .layout-nal-document-gallery .download-file * {
     margin-bottom: 2%;
+    width:100%;
 }
 
 .layout-nal-document-gallery .exhibit-item {
     display: table-cell;
     vertical-align: top;
     margin-bottom: 1.25%;
+    padding:10px !important;
 }
 .layout-nal-document-gallery {
     width:100%;
